--- a/index.html
+++ b/index.html
@@ -1,54 +1,80 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-  <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
-  <link rel="stylesheet" href="./onsenui/onsenui.css">
-  <link rel="stylesheet" href="./onsenui/onsen-css-components.min.css">
-  <script src="./onsenui/onsenui.min.js"></script>
-  <script src="./my-onsenui.min.js"></script>
-</head>
-<body>
-  <ons-navigator id="navigator">
-  <ons-page>
-    <div style="text-align: center; margin-top: 200px">
-    <p>
-      <ons-input id="username" placeholder="Username" modifier="underbar"></ons-input>
-    </p>
-    <p>
-    <ons-input
-        id="password"
-        placeholder="Password"
-        type="password"
-        modifier="underbar"
-      >
-      </ons-input>
-    </p>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+    <meta http-equiv="Content-Security-Policy"
+      content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
+    <!-- CDN -->
+    <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
+    <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
+    <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/solid.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/solid.min.js" charset="utf-8"></script>
+  </head>
+  <body>
+    <ons-splitter>
+      <!-- The side menu -->
+      <ons-splitter-side id="menu" collapse width="220px;">
+        <ons-page>
+          <ons-list>
+            <ons-list-item onclick="loadPage('about.html')">
+              About
+            </ons-list-item>
+          </ons-list>
+        </ons-page>
+      </ons-splitter-side>
+      <!-- Everything not in the side menu -->
+      <ons-splitter-content>
+        <ons-navigator id="navigator" page="login.html"></ons-navigator>
+      </ons-splitter-content>
+    </ons-splitter>
+    <template id="login.html">
+      <ons-page>
+        <div style="text-align: center; margin-top: 200px">
+          <p>
+            <ons-input id="username" placeholder="Username" modifier="underbar"></ons-input>
+          </p>
+          <p>
+            <ons-input
+                id="password"
+                placeholder="Password"
+                type="password"
+                modifier="underbar"
+              >
+              </ons-input>
+          </p>
 
-  <p>
-    <ons-button onclick="login()">Sign in</ons-button>
-  </p>
-  </div>
-</ons-page>
-</ons-navigator>
-<template id="home.html">
-  <ons-page id="home">
-    <ons-toolbar id="home-toolbar">
-    <div class="center" onclick="home()">Home</div>
-    <div class="center" onclick="about()">About</div>
-    </ons-toolbar>
-    Hello!
-  </ons-page>
-</template>
-<template id="about.html">
-  <ons-page id="about">
-  <ons-toolbar>
-    <div class="center"onclick="home()">Home</div>
-    <div class="center"onclick="about()">About</div>
-  </ons-toolbar>
-    This is the about page.
-  </ons-page>
-</template>
-</body>
+          <p>
+            <ons-button onclick="login()">Sign in</ons-button>
+          </p>
+        </div>
+      </ons-page>
+    </template>
+    <template id="home.html">
+      <ons-page id="home">
+        <ons-toolbar id="home-toolbar">
+          <div class="center" onclick="home()">Home</div>
+          <div class="left">
+            <ons-toolbar-button onclick="openMenu()">
+              <ons-icon icon="md-menu"></ons-icon>
+            </ons-toolbar-button>
+          </div>
+        </ons-toolbar>
+        Hello!
+      </ons-page>
+    </template>
+
+    <template id="about.html">
+      <ons-page id="about">
+        <ons-toolbar>
+          <div class="center">About</div>
+          <div class="left">
+            <ons-back-button></ons-back-button>
+          </div>
+        </ons-toolbar>
+        This is the about page.
+      </ons-page>
+    </template>
+  </body>
 </html>
