--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <script src="./my-onsenui.min.js" charset="utf-8"></script>
     <script>
       if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./sw.js')
+        navigator.serviceWorker.register('/sw.js')
           .then(() => console.log("Service Worker Registered"))
           .catch(e => console.log(e));
       }
